# MPContribs

./: .bowerrc  .coveragerc  .dockerignore  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS  CHANGELOG.md  CITATION.cff  CNAME  Dockerfile  DockerfileBuild  DockerfileChrome  DockerfileDocs  DockerfileJhub  DockerfileKernelGateway  INSTALL.md  LICENSE  MANIFEST.in  README.asc  README.md  README.rst  __init__.py  admin.py  apispec.json  app-service.yml  backends.py  bower.json  connector.py  db.sqlite3.init  deploy_alpha.md  docker-compose.yml  docker-entrypoint.sh  doecode.yml  index.html  index.ipynb  jupyterhub_config.py  (+29 more)
binder/: start  (+12 more)
mpcontribs-api/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  DockerfileTest  README.md  docker-entrypoint.sh  environment.yml  gunicorn.conf.py  justfile  kernel_imports.ipynb  main.py  main.sh  maintenance.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  start.sh  supervisord.conf
mpcontribs-api/envs/dev/: contribs.env  lightsources.env  ml.env  workshop-contribs.env
mpcontribs-api/mpcontribs/api/: __init__.py  builder.py  config.py  core.py  dashboard.cfg
mpcontribs-api/requirements/: deployment.txt  macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
mpcontribs-api/scripts/: healthchecks.py  start.sh  start_rq.sh
mpcontribs-api/src/mpcontribs_api/: _openapi.py  app.py  auth.py  authz.py  config.py  db.py  dependencies.py  exceptions.py  logging.py  middleware.py  pagination.py  projection.py  types.py
mpcontribs-api/supervisord/: conf.py  supervisord.conf.jinja
mpcontribs-api/tests/: conftest.py  test_contributions.tavern.yaml  test_contributions_anon.tavern.yaml  test_contributions_auth.tavern.yaml
mpcontribs-api/tests/integration/: conftest.py  test_body_size_limit.py  test_bulk_limits.py  test_component_routes.py  test_contributions.py  test_contributions_routes.py  test_error_handlers.py  test_gateway.py  test_healthcheck.py  test_ingest_jobs_routes.py  test_initiatives.py  test_project_groups.py  test_projects.py  test_redirects.py
mpcontribs-api/tests/unit/: conftest.py  test_auth.py  test_config.py  test_dependencies.py  test_exceptions.py  test_packaging.py  test_pagination.py  test_projection.py  test_supervisord_render.py  test_types.py  test_types_components.py
mpcontribs-client/: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
mpcontribs-client/mpcontribs/: client.py
mpcontribs-client/mpcontribs/client/: __init__.py  core.py  exceptions.py  logger.py  schemas.py  settings.py  test_client.py  types.py  units.py  utils.py
mpcontribs-client/requirements/: deployment.txt  macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
mpcontribs-client/tests/: conftest.py  test_client.py  test_data_structs.py
mpcontribs-io/: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
mpcontribs-io/mpcontribs/io/: __init__.py
mpcontribs-lux/: README.md  pyproject.toml
mpcontribs-lux/examples/: 1-mpcontribs_upload.ipynb  2-aws_opendata_upload.ipynb  README.md
mpcontribs-lux/mpcontribs/lux/: _types.py  autogen.py  pipelines.py  schemas.py
mpcontribs-lux/requirements/: requirements-ubuntu-latest_py3.11.txt  requirements-ubuntu-latest_py3.11_extras.txt  requirements-ubuntu-latest_py3.12.txt  requirements-ubuntu-latest_py3.12_extras.txt
mpcontribs-lux/tests/: conftest.py  test_autogen.py  test_models_for_arrow_compatibility.py
mpcontribs-portal/: Dockerfile  MANIFEST.in  docker-entrypoint.sh  gunicorn.conf.py  healthchecks.py  maintenance.py  manage.py  package.json  pyproject.toml  requirements.txt  run_server.py  settings.py  setup.py  shrink.sh  start.sh  webpack.config.js  wsgi.py
mpcontribs-portal/envs/dev/: contribs.env  lightsources.env  ml.env  workshop-contribs.env
mpcontribs-portal/mpcontribs/portal/: __init__.py  middleware.py  urls.py  views.py
mpcontribs-portal/mpcontribs/users/: utils.py
mpcontribs-portal/notebooks/: convert.sh
mpcontribs-portal/notebooks/contribs.materialsproject.org/: 2dmatpedia.ipynb  Broberg_benchmark_defects.ipynb  ExpXAS.ipynb  ForbiddenTransitions.ipynb  HFP2023.ipynb  MnO2_phase_selection.ipynb  attachments.ipynb  auph3.ipynb  barin_tables.ipynb  bioi_defects.ipynb  cards.ipynb  carrier_transport.ipynb  defect_genome_pcfc_materials.ipynb  deltaHvacancy.ipynb  dilute_solute_diffusion.ipynb  download.ipynb  dtu.ipynb  ediffcrystalprediction.ipynb  esters.ipynb  experimental_thermo.ipynb  experimental_thermoelectrics.ipynb  ferroelectrics.ipynb  gbdb.ipynb  (+21 more)
mpcontribs-portal/requirements/: deployment.txt  macos-latest_py3.10.txt  macos-latest_py3.10_extras.txt  macos-latest_py3.8.txt  macos-latest_py3.8_extras.txt  macos-latest_py3.9.txt  macos-latest_py3.9_extras.txt  ubuntu-latest_py3.10.txt  ubuntu-latest_py3.10_extras.txt  ubuntu-latest_py3.11.txt  ubuntu-latest_py3.11_extras.txt  ubuntu-latest_py3.12.txt  ubuntu-latest_py3.12_extras.txt  ubuntu-latest_py3.8.txt  ubuntu-latest_py3.8_extras.txt  ubuntu-latest_py3.9.txt  ubuntu-latest_py3.9_extras.txt
mpcontribs-portal/site/: settings.py  urls.py
mpcontribs-portal/supervisord/: conf.py  supervisord.conf.jinja
mpcontribs-portal/webtzite/: __init__.py  package.json  views.py
(+1197 files in other folders)
