[build-system]
requires = ["setuptools>=80.0.0","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["mpcontribs_api*"]

[project]
name = "mpcontribs-api"
dynamic = ["version"]
requires-python = ">=3.14"
description="API for community-contributed Materials Project data"
license = "BSD-3-Clause-LBNL"
authors = [
    {name="Patrick Huck", email="phuck@lbl.gov"},
    {name="Brendan Foley", email="bfoley@lbl.gov"},
    {name="The Materials Project", email="feedback@materialsproject.org"},
]
dependencies = [
    # "pint>=0.24",
    # "psycopg2-binary",
    # "rq<=2.3.2",  # see https://github.com/rq/Flask-RQ2/issues/620
    # "setproctitle",
    # "uncertainties",
    # "websocket_client",
    # "zstandard",
    "aioboto3>=15.5.0",
    "beanie>=2.1.0",
    "fastapi[standard]>=0.136.3",
    "fastapi-filter>=2.0.1",
    "jinja2",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-pymongo>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "polars>=1.41.2",
    "pydantic-settings>=2.14.1",
    "pymatgen",
    "pymongo>=4.17.0",
    "python-snappy>=0.7.3",
    "structlog>=25.5.0",
    "supervisor>=4.3.0",
    "types-aiobotocore[s3]>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/materialsproject/MPContribs"
Documentation = "https://docs.materialsproject.org/services/mpcontribs"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "basedpyright>=1.29.0",
    "pydocstringformatter>=0.7.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "httpx2>=0.28.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "base: basic resource testing",
    "extra: all extra views",
    "db: requires a live MongoDB connection (set MPCONTRIBS_MONGO__URI)",
]

[tool.ruff]
line-length = 120
exclude = ["tests/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E741", "B008"]

[tool.pydocstringformatter]
max-line-length = 120

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
extraPaths = ["src"]
ignore=["tests/"]
