[build-system]
requires = ["setuptools>=80.0.0","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
relative_to = "__file__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["scripts","supervisord"]
include = ["mpcontribs.portal", "mpcontribs.users"]

[project]
name = "mpcontribs-portal"
dynamic = ["version"]
requires-python = ">=3.11"
description="MPContribs Portal"
license = "BSD-3-Clause-LBNL"
authors = [
    {name = "Patrick Huck", email = "phuck@lbl.gov"},
    {name = "The Materials Project", email="feedback@materialsproject.org"},
]
dependencies = [
    "boltons",
    "boto3",
    "ddtrace",
    "Django>=3.2,<4.0",
    "django-extensions",
    "django-settings-file",
    "django-webpack4-loader",
    "fastnumbers",
    "gunicorn[gevent]<24.1.0",
    "ipykernel",
    "ipython-genutils",
    "jinja2",
    "json2html",
    "monty",
    "mpcontribs-client",
    "nbconvert",
    "nbformat",
    "redis",
    "scipy",
    "setproctitle",
    "whitenoise",
]

[project.urls]
Homepage = "https://github.com/materialsproject/MPContribs"
Documentation = "https://docs.materialsproject.org/services/mpcontribs"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "pytest-flake8",
    "pytest-pycodestyle",
    "pytest-xdist",
]
all = [
    "mpcontribs-portal[dev]"
]

[tool.pytest]
markers = [
    "base: basic resource testing",
    "extra: all extra views",
]

[tool.pycodestyle]
count = true
ignore = ["E121","E123","E126","E133","E226","E241","E242","E704","W503","W504","W505","E741","W605"]
max-line-length = 120
statistics = true
exclude = ["supervisord","notebooks"]

[tool.flake8]
exclude = [".git","__pycache__","tests","flasgger","flask-mongorest"]
extend-ignore = ["E741",]
max-line-length = 120

[tool.pydocstyle]
ignore = ["D105","D2","D4"]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
python_version = 3.11
